Clean up unused anchor_point parameter in TranslateBubbleView

The only callsite of TranslateBubbleView::ShowBubble sets anchor_point
to gfx::Point(). We can remove this parameter entirely.

Bug: 915169
Change-Id: I3a5c7aec68288d18c327ce1740d5694abf523576
Reviewed-on: https://chromium-review.googlesource.com/c/1408691
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622703}
Former-commit-id: 94f8376ac902a1140a54e6213e7f16c13e6a2eae